--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,20 @@
 version: '2'
 services:
+  mysql:
+#    build: .
+    image: mysql/mysql-server
+    environment:
+      MYSQL_ROOT_PASSWORD: "Password"
+    ports:
+     - "3307:3306"
+
   web:
 #    build: .
     image: flask
+    depends_on: [ mysql ]
+    links: [ mysql ]
     ports:
      - "5000:5000"
+
+
+
