Added the 'flasknet' network to the database section of the compose files.

--- a/compose-flask-mysql.yml
+++ b/compose-flask-mysql.yml
@@ -20,5 +20,7 @@ services:
       MYSQL_ROOT_PASSWORD: "12345678"
     ports:
       - "3306:3306"
+    networks:
+      - flasknet
 networks:
   flasknet:
