--- a/compose-flask-mysql-visualizer.yml
+++ b/compose-flask-mysql-visualizer.yml
@@ -20,6 +20,8 @@ services:
       MYSQL_ROOT_PASSWORD: "12345678"
     ports:
       - "3306:3306"
+    networks:
+      - flasknet
   visualizer:
     image: dockersamples/visualizer:stable
     ports:
