Added user, password and database fields to the MySQL compose files.

--- a/compose-flask-mysql-visualizer.yml
+++ b/compose-flask-mysql-visualizer.yml
@@ -17,6 +17,9 @@ services:
   mysql:
     image: mysql/mysql-server
     environment:
+      MYSQL_USER: "flask"
+      MYSQL_PASSWORD: "12345678"
+      MYSQL_DATABASE: "flask_data"
       MYSQL_ROOT_PASSWORD: "12345678"
     ports:
       - "3306:3306"
